--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     //runtime 'com.okta.jwt:okta-jwt-verifier-impl:0.4.1-SNAPSHOT'
     implementation 'com.nimbusds:oauth2-oidc-sdk:9.19'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
     shadow 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
     shadow 'net.milkbowl.vault:VaultAPI:1.7'
 }
